NTU-738 Use -XX:+EnableDynamicAgentLoading instead of the -javaagent